--- a/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaignForm.cshtml
@@ -89,9 +89,9 @@
                                     <label>Theme</label>  <br />
                                     @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name", Model.Themes_Id), (Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
-                                        (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" }) 
+                                        (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
                                     @*<a data-next-stage="select" data-target-id="Themes_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
-                                    <a data-next-stage="@(Model.ThemeSelectUnselect==false?"select":"unselect")"  data-target-id="Themes_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.ThemeSelectUnselect==false? "Select All" : "Select None")</a> 
+                                    <a data-next-stage="@(Model.ThemeSelectUnselect==false?"select":"unselect")" data-target-id="Themes_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.ThemeSelectUnselect == false ? "Select All" : "Select None")</a>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -99,9 +99,9 @@
                                     <label>Geography</label><span class="text-danger">*</span><br />
                                     @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id), (Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
-                                        (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" }) 
+                                        (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
                                     @*<a data-next-stage="select" data-target-id="Geographys_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
-                                    <a data-next-stage="@(Model.GeoSelectUnselect==false?"select":"unselect")"  data-target-id="Geographys_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.GeoSelectUnselect==false? "Select All" : "Select None")</a> 
+                                    <a data-next-stage="@(Model.GeoSelectUnselect==false?"select":"unselect")" data-target-id="Geographys_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.GeoSelectUnselect == false ? "Select All" : "Select None")</a>
                                 </div>
                                 <div class="validmsggeography"></div>
                             </div>
@@ -149,10 +149,10 @@
                                 <div class="form-group">
                                     <label>Business Group<span class="text-danger">*</span></label><br />
                                     @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name", Model.BusinessGroups_Id), (Model.Id != 0 && Model.Status == "Complete") ?
-                                        (object) new {disabled = "disabled", @class = "chosen-select form-control"} :
-                                        (object) new {@class = "chosen-select form-control"})
-                                    <a data-next-stage="@(Model.BgSelectUnselect==false?"bgselect":"bgunselect")"  data-target-id="BusinessGroups_Id" data-select-all="BGselectunselect" href="javascript:void(0);"> @(Model.BgSelectUnselect==false? "Select All" : "Select None")</a> 
-                                     <div class="validmsgbusinesGp"></div>
+                                        (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
+                                        (object)new { @class = "chosen-select form-control" })
+                                    <a data-next-stage="@(Model.BgSelectUnselect==false?"bgselect":"bgunselect")" data-target-id="BusinessGroups_Id" data-select-all="BGselectunselect" href="javascript:void(0);"> @(Model.BgSelectUnselect == false ? "Select All" : "Select None")</a>
+                                    <div class="validmsgbusinesGp"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -161,8 +161,8 @@
                                     @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name", Model.Segments_Id), (Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
                                         (object)new { @class = "chosen-select form-control" })
-                                    @*   <a data-next-stage="select" data-target-id="Segments_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@ 
-                                    <a data-next-stage="@(Model.SegSelectUnselect==false?"Segselect":"Segunselect")" data-target-id="Segments_Id" data-select-all="Segselectunselect" href="javascript:void(0);"> @(Model.SegSelectUnselect == false ? "Select All" : "Select None")</a> 
+                                    @*   <a data-next-stage="select" data-target-id="Segments_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
+                                    <a data-next-stage="@(Model.SegSelectUnselect==false?"Segselect":"Segunselect")" data-target-id="Segments_Id" data-select-all="Segselectunselect" href="javascript:void(0);"> @(Model.SegSelectUnselect == false ? "Select All" : "Select None")</a>
                                     <div class="validmsgbusinesSegment"></div>
                                 </div>
                             </div>
@@ -173,9 +173,9 @@
                                     <label>Business Line</label><span class="text-danger">*</span><br />
                                     @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name", Model.BusinessLines_Id), (Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
-                                        (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" }) 
+                                        (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
                                     @*<a data-next-stage="select" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
-                                    <a data-next-stage="@(Model.BlSelectUnselect==false?"select":"unselect")" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.BlSelectUnselect == false ? "Select All" : "Select None")</a> 
+                                    <a data-next-stage="@(Model.BlSelectUnselect==false?"select":"unselect")" data-target-id="BusinessLines_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.BlSelectUnselect == false ? "Select All" : "Select None")</a>
                                     <div class="validmsgbusinesLine"></div>
                                 </div>
                             </div>
@@ -184,9 +184,9 @@
                                     <label>Industry</label><span class="text-danger">*</span><br />
                                     @Html.ListBoxFor(m => m.Industries_Id, new MultiSelectList(Model.IndustryViewModels, "Id", "Name", Model.Industries_Id), (Model.Id != 0 && Model.Status == "Complete") ?
                                         (object)new { disabled = "disabled", @class = "chosen-select form-control" } :
-                                        (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" }) 
+                                        (object)new { @class = "chosen-select form-control", onchange = "DDLSelectUnselect(this)" })
                                     @*<a data-next-stage="select" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);">Select All</a>*@
-                                    <a data-next-stage="@(Model.IndustrySelectUnselect==false?"select":"unselect")" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.IndustrySelectUnselect == false ? "Select All" : "Select None")</a> 
+                                    <a data-next-stage="@(Model.IndustrySelectUnselect==false?"select":"unselect")" data-target-id="Industries_Id" data-select-all="selectunselect" href="javascript:void(0);"> @(Model.IndustrySelectUnselect == false ? "Select All" : "Select None")</a>
                                     <div class="validmsgbusinesIndustry"></div>
                                 </div>
                             </div>
@@ -235,8 +235,9 @@
                                             if (Model.TacticCampaignReachResponseViewModels.ToList()[i].MetricType == "Reach")
                                             {
                                                 iReachCount++;
-                                                <tr class="trReach">
+                                                <tr class="@(iReachCount == 1 ? "trReach" : "")">
                                                     @Html.HiddenFor(m => m.TacticCampaignReachResponseViewModels.ToList()[i].MetricType, new { @Value = "Reach" })
+                                                    @Html.HiddenFor(m => m.TacticCampaignReachResponseViewModels.ToList()[i].Id, new { @Value = Model.TacticCampaignReachResponseViewModels.ToList()[i].Id, @class = "hdnMetric" })
                                                     <td>
                                                         @if (iReachCount == 1)
                                                         {<label>Reach</label>}
@@ -279,11 +280,15 @@
 
                                                 </tr>
                                             }
-                                            else if (Model.TacticCampaignReachResponseViewModels.ToList()[i].MetricType == "Response")
+                                        }
+                                        @for (int i = 0; i < Model.TacticCampaignReachResponseViewModels.Count(); i++)
+                                        {
+                                            if (Model.TacticCampaignReachResponseViewModels.ToList()[i].MetricType == "Response")
                                             {
                                                 iResponseCount++;
-                                                <tr class="trResponse">
+                                                <tr class="@(iResponseCount == 1 ? "trResponse" : "")">
                                                     @Html.HiddenFor(m => m.TacticCampaignReachResponseViewModels.ToList()[i].MetricType, new { @Value = "Response" })
+                                                    @Html.HiddenFor(m => m.TacticCampaignReachResponseViewModels.ToList()[i].Id, new { @Value = Model.TacticCampaignReachResponseViewModels.ToList()[i].Id, @class = "hdnMetric" })
                                                     <td>
                                                         @if (iResponseCount == 1)
                                                         {<label>Response</label>}
@@ -318,7 +323,7 @@
                                                         }
                                                         else
                                                         {
-                                                            <input type="button" id="btnRemoveResponseRow" class="btn btn-primary btn-white removeRow" title="Remove Row" value="-" disabled="@(Model.Status == "Complete" ? true : false)"/>
+                                                            <input type="button" id="btnRemoveResponseRow" class="btn btn-primary btn-white removeRow" title="Remove Row" value="-" disabled="@(Model.Status == "Complete" ? true : false)" />
                                                         }
 
                                                         <span class="validmsgResponseMetric"></span>
@@ -333,39 +338,39 @@
                         </div>
 
                     </fieldset>
-                <fieldset>                    
-                    <div class="form-group">
-                        <div class="row " style="padding-top: 10px">
-                            <div class="col-md-4"></div>
-                            <div class="col-md-8"> 
-                                
-                                @if (Model.Id == 0)
-                                {
-                                    <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("Index", "MasterCampaign")'"/></div>
-                                }
-                                else
-                                {
-                                    <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("TacticCampaignList", "TacticCampaign")'"/></div>
-                                } 
-                                @if (Model.Id != 0 && Model.Status == "Save Draft")
-                                {
-                                    <div class="col-md-3">
-                                        <input type="button" Id="btnDeleteTactic" name="button" value="Delete Draft" class="btn btn-primary col-sm-12" />
-                                    </div>
-                                } 
-                                @if (Model.Status != "Complete")
-                                {
-                                    <div class="col-md-3">
-                                        <input type="button" Id="btnSaveDrafttactic" name="button" value="Save Draft" class="btn btn-primary col-sm-12" />
-                                    </div>
-                                    <div class="col-md-3">
-                                        <input type="button" Id="btnSubmitTactic" name="button" value="Submit" class="btn btn-primary col-sm-12" />
-                                    </div>
-                                }                                                             
+                    <fieldset>
+                        <div class="form-group">
+                            <div class="row " style="padding-top: 10px">
+                                <div class="col-md-4"></div>
+                                <div class="col-md-8">
+
+                                    @if (Model.Id == 0)
+                                    {
+                                        <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("Index", "MasterCampaign")'" /></div>
+                                    }
+                                    else
+                                    {
+                                        <div class="col-md-3"><input type="button" class="btn btn-primary col-sm-12" value="Back" onclick="location.href = '@Url.Action("TacticCampaignList", "TacticCampaign")'" /></div>
+                                    }
+                                    @if (Model.Id != 0 && Model.Status == "Save Draft")
+                                    {
+                                        <div class="col-md-3">
+                                            <input type="button" Id="btnDeleteTactic" name="button" value="Delete Draft" class="btn btn-primary col-sm-12" />
+                                        </div>
+                                    }
+                                    @if (Model.Status != "Complete")
+                                    {
+                                        <div class="col-md-3">
+                                            <input type="button" Id="btnSaveDrafttactic" name="button" value="Save Draft" class="btn btn-primary col-sm-12" />
+                                        </div>
+                                        <div class="col-md-3">
+                                            <input type="button" Id="btnSubmitTactic" name="button" value="Submit" class="btn btn-primary col-sm-12" />
+                                        </div>
+                                    }
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </fieldset>
+                    </fieldset>
                 </div>
                 <!-- /.row -->
             </div>
